Some little detail changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						</div>
 					</div>
 					<form onsubmit="app.controllers.todoController.addTodo(event)">
-						<input type="text" name="description" placeholder="What's to do today?" required>
+						<input type="text" name="description" placeholder="Add to list" required>
 						<button type="submit">Submit</button>
 					</form>
 				</div>
